Migrate UDPSocket::LeaveGroup IPv4 case to include interface Id.

LeaveGroup() previously used ip_mreq, which does not allow the interface
to which the operation applies to be specified by Id. Since no interface
IP address is specified in the call, it fails if the network stack
expects the interface to be explicitly specified (i.e. under Fuchsia).

Bug: 864450
Change-Id: Idff67518387d80c6c91f96bfd774db4a11a310f8
Reviewed-on: https://chromium-review.googlesource.com/1152903
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579212}
Former-commit-id: d21eb85bd5326d1e5f6a58ef0ec409baab00b40d